# unidoc_service

./: .env  auth_bearer.py  main.py  pyproject.toml  utils.py
database/: config.py
models/: document.py  user.py
notebooks/: queries.ipynb
routers/corpus/: __init__.py  corpus.py  corpus_service.py
routers/documents/: documents.py  documents_service.py  recommedation_service.py  semantic_service.py
routers/users/: __init__.py  login.py  logout.py  register.py  users.py
schemas/: __init__.py  documents.py  user.py
